...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_notification_inactive_network_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_notification_inactive_network"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_notification_inactive_network_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radiogroup_activity_global_settings_notification_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/radiobutton_activity_global_settings_notification_type_failure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/radiobutton_activity_global_settings_notification_type_change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_notification_after_failures_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_notification_after_failures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_suspension_enabled_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_suspension_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_suspension_enabled_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_suspension_intervals_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_enforce_ping_package_size_enabled_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_enforce_ping_package_size_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_enforce_ping_package_size_enabled_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_download_external_storage_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_download_external_storage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_external_storage_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_global_settings_download_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_download_folder_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_download_keep_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_download_keep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_keep_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_download_follows_redirects_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_download_follows_redirects"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_follows_redirects_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_global_settings_log_file_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_log_file"
