...
  -->

<resources>
    <string name="activity_global_settings_title">Global settings</string>
    <string name="menu_action_activity_global_settings_reset">Reset</string>
    <string name="label_activity_global_settings_global">Global settings</string>
    <string name="label_activity_global_settings_notification_inactive_network">Notifications when network is not active</string>
    <string name="label_activity_global_settings_notification_type">Notification on</string>
    <string name="label_activity_global_settings_notification_after_failures">Notification after failures</string>
    <string name="text_activity_global_settings_notification_type_failure">Failure</string>
    <string name="text_activity_global_settings_notification_type_change">Change</string>
    <string name="label_activity_global_settings_suspension_enabled">Suspension intervals enabled</string>
    <string name="label_activity_global_settings_suspension_intervals">Defined suspension intervals</string>
    <string name="label_activity_global_settings_enforce_ping_package_size_enabled">Enforce default ping package size</string>
    <string name="text_activity_global_settings_suspension_intervals_disabled">Disabled</string>
    <string name="text_activity_global_settings_suspension_intervals_none">None</string>
    <string name="label_activity_global_settings_download_external_storage">Download to an external storage folder</string>
    <string name="label_activity_global_settings_download_folder">Download folder</string>
    <string name="label_activity_global_settings_log_file">Log to file</string>
    <string name="label_activity_global_settings_log_folder">Log folder</string>
    <string name="label_activity_global_settings_download_keep">Keep downloaded files</string>
    <string name="label_activity_global_settings_download_follows_redirects">Download follows redirects</string>
    <string name="text_activity_global_settings_download_folder_internal">Internal storage folder</string>
    <string name="text_activity_global_settings_log_folder_none">None</string>
    <integer name="activity_global_settings_suspension_intervals_text_size_normal">14</integer>
    <integer name="activity_global_settings_suspension_intervals_text_size_smaller">12</integer>
    <integer name="activity_global_settings_suspension_intervals_text_size_small">10</integer>
    <integer name="activity_global_settings_suspension_intervals_number_column_break">3</integer>
</resources>
